--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-analytics.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-storage.js"></script>
 
 <script>
   // Your web app's Firebase configuration
