--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,8 @@
 <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-analytics.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js">. </script>
+<script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-firestore.js"> </script>
+<script src="https://www.gstatic.com/firebasejs/8.2.4/firebase-storage.js"></script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
